# ToDoList

./: .env-template  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: actions.yaml  deploy_push_main.yaml  push_any_except_main.yaml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml  env
deploy/nginx/: default.conf
tests/: factories.py  tests.py
tests/core/: conftest.py
tests/core/views/: test_login.py  test_profile_view.py
tests/goals/views/: test_board.py  test_board_create.py  test_board_list.py  test_category.py  test_goal.py
todolist/: settings.py  urls.py
todolist/bot/: models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  fields.py  serializers.py  urls.py  views.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0002_add_goals_model.py  0003_add_comment_model.py  0004_update_comment_model.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
