[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "A to-do list and task manager for professionals and small businesses. Combining tasks, projects, comments, attachments, notifications, and more."
authors = ["Artem <artem.mikhaylov5593@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ansible-vault-win = "^1.0.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
